--- a/projects/01_fyyur/starter_code/templates/pages/show_venue.html
+++ b/projects/01_fyyur/starter_code/templates/pages/show_venue.html
@@ -6,6 +6,11 @@
 		<h1 class="monospace">
 			{{ venue.name }}
 		</h1>
+		<a href="/venues/{{ venue.id }}/edit">
+			<div>
+				<h4 style="padding:2px;">Edit venue</h4> 
+			</div>
+		</a>
 		<p class="subtitle">
 			ID: {{ venue.id }}
 		</p>
