--- a/projects/01_fyyur/starter_code/templates/pages/show_artist.html
+++ b/projects/01_fyyur/starter_code/templates/pages/show_artist.html
@@ -6,6 +6,11 @@
 		<h1 class="monospace">
 			{{ artist.name }}
 		</h1>
+		<a href="/artists/{{ artist.id }}/edit">
+			<div>
+				<h4 style="padding:2px;">Edit artist</h4> 
+			</div>
+		</a>
 		<p class="subtitle">
 			ID: {{ artist.id }}
 		</p>
@@ -25,7 +30,8 @@
 		</p>
 		<p>
 			<i class="fab fa-facebook-f"></i> {% if artist.facebook_link %}<a href="{{ artist.facebook_link }}" target="_blank">{{ artist.facebook_link }}</a>{% else %}No Facebook Link{% endif %}
-        </p>
+		</p>
+
 		{% if artist.seeking_venue %}
 		<div class="seeking">
 			<p class="lead">Currently seeking performance venues</p>
@@ -38,6 +44,7 @@
 			<i class="fas fa-moon"></i> Not currently seeking performance venues
 		</p>
 		{% endif %}
+
 	</div>
 	<div class="col-sm-6">
 		<img src="{{ artist.image_link }}" alt="Venue Image" />
